app/assets/stylesheets/kanban.css.scss
.board-title {
  display: inline-block;
  position: relative;
}

.help-tooltip {
  display: inline-block;
  margin-left: 5px;
  cursor: help;
}

.help-tooltip i {
  color: #999;
  font-size: 16px;
}

.help-tooltip:hover i {
  color: #666;
}

.inner-annotation {
  font-weight: 600;
  font-style: oblique;
}

.sort-kanban-board {
  display: flex;
  flex-direction: row;
  gap: 18px;
  align-items: center;
}

.kanban-board {
  padding: 0 1rem 1rem 1rem;
}

.kanban-board-preview {
  padding: 0 1rem 1rem 1rem;
}

.kanban-card {
  margin-bottom: 1rem;
  overflow: auto;
}

.kanban-card.thumbnail {
  padding: 8px 12px 4px;
  line-height: 25px;
  font-size: 15px;
  border: none;
  box-shadow: var(--ds-shadow-raised, 0px 1px 1px #091e4240, 0px 0px 1px #091e424f);

  a {
    color: #2b0065d6;
    text-shadow: 1px 1px 2px #ffffff, 10px 5px 1em #65001140;
  }
}

.kanban-card-content {
  overflow: auto;
}

.kanban-column-headers  h4{
  margin-bottom: 2rem;
  border-bottom: darkgray solid;
}

.kanban-users {
  label {
    display: inline-block;
  }

  input {
    margin-right: 0.5rem;
  }

  span {
    display: block;
  }
}

.kanban-user-choice {
  max-width: max-content;
}

.check-all-users {
  margin-bottom: 5px;
  display: inline-block;
}

.uncheck-all-users {
  margin: 0 5px 5px 5px;
  display: inline-block;
}

input.filter-kanban-users {
  max-width: 120px;
  margin: 0 5px 5px 0;
  padding-bottom: 3px;
}

.kanban-card-info {
  margin: 9px 2px 5px 0;
  font-style: italic;
  min-height: 20px;

  .kanban-deadline {
    color: #a00000;
  }
}

.sort-kanban-board {
  .form-group {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 20%;
    height: 31px;
    margin-top: 5px;
  }
}

.email-warning {
  color: #fff;
  background-color: #dc3545;
  padding: 2px 5px;
  border-radius: 3px;
  font-size: 12px;
  margin-left: 10px;
}

span.role-dep-info {
  display: inline-block;
}

label.label-card-managers {
  display: inline-block;
}

